[package]
name = "yarhos"
version = "0.1.0"
authors = ["Pontus Lundström <pontus.lundstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bootimage]
default-target = "yarhos-x86_64-nosse-softfloat.json"
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 30

[dependencies]
bootloader = "0.8.2"
spin = "0.5.2"
uart_16550 = "0.2.1"
volatile = "0.2.6"
x86_64 = "0.7.5"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
