[package]
name = "yarhos"
version = "0.1.0"
authors = ["Pontus Lundström <pontus.lundstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 30

[dependencies]
bootloader = "0.9.23"
spin = "0.9.8"
uart_16550 = "0.2.18"
volatile = "0.4.6"
x86_64 = "0.14.2"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
